--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Title</title>
     <style>
+        @import "./output.css";
         @import "./styles/overall.css";
         @import "./styles/fonts.css";
         @import "./styles/style.css";
         @import "./styles/media.css";
-        @import "./output.css";
     </style>
 </head>
-<body class="ltFont">
+<body class="ltFont text-dark">
+<div class="w-14 h-14 bg-dark fixed bottom-4 right-4 rounded-lg flex justify-center items-center">
+    <svg width="20" height="22" viewBox="0 0 20 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M17.8571 2.00009H2.14286C0.959388 2.00009 0 2.95948 0 4.14295V15.5715C0 16.755 0.959388 17.7144 2.14286 17.7144H4.67858L4.29002 21.2072C4.2467 21.5994 4.52946 21.9523 4.92158 21.9956C5.02169 22.0067 5.12301 21.9964 5.21888 21.9656C5.31476 21.9347 5.40302 21.8839 5.47788 21.8165L10.0364 17.7144H17.8571C19.0406 17.7144 20 16.755 20 15.5715V4.14295C20 2.95948 19.0406 2.00009 17.8571 2.00009Z" fill="white"/>
+    </svg>
+
+</div>
 <header class="py-2 px-5 flex justify-between items-center">
     <svg xmlns="http://www.w3.org/2000/svg" width="103" height="22" viewBox="0 0 103 22" fill="none">
             <path d="M102.328 18.9402H103V21.8164H101.259C99.345 21.8164 98.388 20.9801 98.388 19.3074C97.2069 21.1025 95.4863 22 93.226 22C91.4748 22 90.0698 21.592 89.0109 20.7761C87.952 19.9601 87.4226 18.8382 87.4226 17.4103C87.4226 15.7988 87.9928 14.5647 89.1331 13.7079C90.2734 12.8308 91.933 12.3922 94.1118 12.3922H98.052V11.4437C98.052 10.5665 97.7465 9.88316 97.1357 9.3936C96.5451 8.88363 95.7103 8.62864 94.631 8.62864C93.674 8.62864 92.8798 8.84283 92.2486 9.2712C91.6173 9.67918 91.2406 10.2299 91.1185 10.9235H87.8808C88.0437 9.3936 88.736 8.19007 89.9578 7.31293C91.1999 6.41538 92.8086 5.96661 94.7838 5.96661C96.8811 5.96661 98.4898 6.45618 99.6097 7.43532C100.75 8.41446 101.32 9.82197 101.32 11.6579V17.9305C101.32 18.318 101.402 18.5832 101.565 18.726C101.727 18.8688 101.982 18.9402 102.328 18.9402ZM98.052 15.3908V14.84H93.9591C91.8413 14.84 90.7825 15.6254 90.7825 17.1961C90.7825 17.8693 91.037 18.4098 91.5461 18.8178C92.0755 19.2258 92.7882 19.4298 93.6842 19.4298C95.0485 19.4298 96.1073 19.0626 96.8608 18.3282C97.6345 17.5939 98.0316 16.6147 98.052 15.3908Z" fill="#1C1C29"/>
@@ -53,7 +59,7 @@
         </button>
     </div>
 </header>
-<div class="mt-2 px-5 flex flex-col">
+<div class="mt-2 px-5 flex flex-col gap-8">
     <div class="w-full relative">
         <img class="w-full relative" src="assets/imgs/videoBG.png">
         <div class="absolute w-full h-full top-0 flex justify-center items-center">
@@ -74,6 +80,23 @@
             <svg width="12" height="12" viewBox="0 0 12 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M12 7L-6.52533e-07 13.9282L-4.68497e-08 0.0717964L12 7Z" fill="#1C1C29"/>
             </svg>
+        </div>
+    </div>
+    <h1>Снимаем<br>трендовые  видео-Reels</h1>
+    <p class="text-lg">Которые будут приводить 300+ потенциальных клиентов каждый день без вложений на рекламу.</p>
+    <div class="flex flex-col gap-5">
+        <div class="flex flex-col gap-3">
+            <input class="whiteInput rounded-lg" type="text" placeholder="Номер телефона">
+            <button class="bg-dark rounded-lg text-white h-14">обсудить проект</button>
+        </div>
+        <div class="flex flex-col gap-3 text-center">
+            <div class="flex justify-center items-center gap-1.5 text-base">
+                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20" fill="none">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M10.5001 2.91C6.58439 2.91 3.41009 6.0843 3.41009 10C3.41009 13.9157 6.58439 17.09 10.5001 17.09C14.4158 17.09 17.5901 13.9157 17.5901 10C17.5901 6.0843 14.4158 2.91 10.5001 2.91ZM1.59009 10C1.59009 5.07914 5.57923 1.09 10.5001 1.09C15.4209 1.09 19.4101 5.07914 19.4101 10C19.4101 14.9209 15.4209 18.91 10.5001 18.91C5.57923 18.91 1.59009 14.9209 1.59009 10ZM9.59009 6.8C9.59009 6.29742 9.99751 5.89 10.5001 5.89H10.5081C11.0107 5.89 11.4181 6.29742 11.4181 6.8C11.4181 7.30258 11.0107 7.71 10.5081 7.71H10.5001C9.99751 7.71 9.59009 7.30258 9.59009 6.8ZM10.5001 9.09C11.0027 9.09 11.4101 9.49742 11.4101 10V13.2C11.4101 13.7026 11.0027 14.11 10.5001 14.11C9.99751 14.11 9.59009 13.7026 9.59009 13.2V10C9.59009 9.49742 9.99751 9.09 10.5001 9.09Z" fill="#1C1C29"/>
+                </svg>
+                Позвоним в течении 7 минут
+            </div>
+            <p class="text-gray-400 text-xs">получите самую подробную консультацию <br>и решение всех ваших вопросов.</p>
         </div>
     </div>
 </div>
